// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CancelOffer should render correctly for buy offer 1`] = `
<PeachText>
  Are you sure?
</PeachText>
`;

exports[`CancelOffer should render correctly for sell offer 1`] = `
<PeachText>
  Are you sure?

If you have already sent your bitcoin to the escrow, you will be refunded, minus the bitcoin network fees.
</PeachText>
`;
